<resources>
    <string name="app_name">ScheduleManagement</string>
    <string name="PlainTextPlaceholderEventName">Event Name</string>
    <string name="PlainTextPlaceholderEventType">Type of event</string>
    <string name="PlainTextPlaceholderEventLocation">Event location</string>
    <string name="PlainTextPlaceholderNameOfTheEventHost">Name of the event host</string>
    <string name="PlainTextPlaceholderChoiceTime">0:00</string>
    <string name="SaveGood">Event saved</string>
    <string name="WriteNameError">You need to fill in the name of the event :3</string>

    <string name="Mon"> mo </string>
    <string name="Tue"> tu </string>
    <string name="Wed"> we </string>
    <string name="Thu"> th </string>
    <string name="Fri"> fr </string>
    <string name="Sat"> sa </string>
    <string name="Sun"> su </string>

    <string name="Monday"> Monday </string>
    <string name="Tuesday"> Tuesday </string>
    <string name="Wednesday"> Wednesday </string>
    <string name="Thursday"> Thursday </string>
    <string name="Friday"> Friday </string>
    <string name="Saturday"> Saturday </string>
    <string name="Sunday"> Sunday </string>

    <string name="save">Save</string>
    <string name="add_event">Add Event</string>
    <string name="error_choice_week_day">Choose a day of the week</string>
    <string name="decline">Cancle</string>
    <string name="confirmation_of_deletion">Do you really want to delete the event ?</string>
    <string name="cancel">cancel</string>
    <string name="delete">Delete</string>
    <string name="connection_error_message">Connection error. Check your internet connection.</string>
    <string name="find_a_schedule_in_setting_activity">Find a schedule</string>
    <string name="find_the_schedule_of_teachers">Find the schedule of teachers</string>
    <string name="time_intervals">Time intervals</string>
    <string name="application_settings">Application settings</string>
    <string name="set_current_week_type">Set current week type:</string>
    <string name="set_server_address">Set server address:</string>
    <string name="note_name">Note Name</string>
    <string name="text_of_the_note">Text of the note</string>
    <string name="start_at">start at:</string>
    <string name="end_at">end at:</string>
    <string name="time_pattern">time pattern</string>
    <string name="day_of_the_week">day of the week</string>
    <string name="type_of_week">type of week</string>
    <string name="search">Search</string>
    <string name="time">Time:</string>
    <string name="time_duration">Time duration:</string>
    <string name="add_note">Add note</string>
    <string name="add_schedule">Add schedule</string>
    <string name="Schedule_added_successfully">Schedule added successfully</string>
    <string name="No_category">No category</string>
    <string name="Save">Save</string>
    <string name="The_server_address_has_been_updated">The server address has been updated</string>
    <string name="The_address_field_cannot_be_empty">The address field cannot be empty</string>
    <string name="do_you_really_want_to_remove_the_time_pattern">Do you really want to remove the time pattern?</string>
    <string name="Type_of_event">Type of event: </string>
    <string name="Host_of_the_event">Host of the event: </string>
    <string name="Location">Location: </string>
    <string name="Time_duration">Time duration: </string>
    <string name="upper_week">Upper week</string>
    <string name="lower_week">Lower week</string>
    <string name="share_a_schedule">Share a schedule</string>
    <string name="title_activity_share_schedule">ActivityShareSchedule</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="server_connect_err">There is no connection to the server.</string>
    <string name="ok_add_apdate">Schedule added/updated to the cloud</string>
    <string name="find_a_user_schedule">Find a user schedule</string>
    <string name="AddEvent">Add Event</string>
    <string name="schedule_constructor">Schedule constructor</string>
    <string name="event_templates">Event templates</string>
    <string name="schedule">Schedule</string>
    <string name="other_1">Other</string>
    <string name="lear_schedule">Сlear schedule</string>
    <string name="lear_note">Сlear note</string>
    <string name="scelule_clear_text">Do you really want to deduct the schedule?</string>
    <string name="delete_note_list">Do you really want to deduct notes?</string>
    <string name="share_a_new_schedule_or_update_an_existing_one">Share a new schedule or update an existing schedule</string>
    <string name="name_note">Name: </string>
    <string name="category_note">Category: </string>
</resources>