<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityDownloadUsersSchedule">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/action_con"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/backButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="start|center"
                    android:layout_margin="8dp"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:src="?attr/back_vector" />

                </androidx.cardview.widget.CardView>

                <EditText
                    android:id="@+id/etSearchGroup"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/deep_orange_100"
                    android:hint="@string/search"
                    android:visibility="gone"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/buttonSearchGroup"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="start|center"
                    android:layout_margin="8dp"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:src="?attr/search_vector" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/connectErrorBox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="?attr/icon_no_connect" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/connection_error_message"
                android:textSize="19sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/button_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

        </ScrollView>

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible"/>

    <LinearLayout
        android:id="@+id/backGrayBlur"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#aa555555"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        android:clickable="true">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardScheduleDemonstration"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:visibility="gone"
            android:clickable="true">

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textSize="28dp"
                        android:text="@string/upper_week"
                        android:gravity="center"/>

                    <LinearLayout
                        android:id="@+id/llScheduleDemonstrationUp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="4dp">
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:textSize="28dp"
                        android:text="@string/lower_week"
                        android:gravity="center"/>

                    <LinearLayout
                        android:id="@+id/llScheduleDemonstrationDown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="4dp">
                    </LinearLayout>


                </LinearLayout>

            </ScrollView>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/menuScheduleDemonstration"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:visibility="visible"
            android:clickable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/addSchedule"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_margin="8dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:src="?attr/download_vector" />

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/closeScheduleDemonstration"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_margin="8dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center"
                        android:src="?attr/close_vector" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>